# computer-workflow-automator

./: .gitignore  README.md  config.py  main.py  pyproject.toml
analyzer/: __init__.py  parameter_detector.py  schema.py  workflow_extractor.py
executor/: __init__.py  loop.py  macos_computer.py  reference_frames_tool.py  workflow_runner.py
prompts/: executor_prompts.py
recorder/: __init__.py  session.py  transcriber.py  video_processor.py
ui/: __init__.py  streamlit_app.py
utils/: llm.py  logger.py  tracking.py
