[project]
name = "workflow-automation"
version = "0.1.0"
description = "Learn and automate computer workflows from video demonstrations"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "pyautogui>=0.9.54",
    "streamlit>=1.29.0",
    "Pillow>=10.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
workflow-automation = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
